<resources>
    <string name="app_name">Foodies</string>
    <string name="chef">chef</string>
    <string name="customer">customer</string>
    <string name="login">login</string>
    <string name="create_account">create account</string>
    <string name="confirm">confirm</string>
    <string name="Password">Password</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="OR">OR</string>
    <string name="up_btn">Up Button</string>
    <string name="my_kitchen">My Kitchen</string>
    <string name="payments">payments</string>
    <string name="add_item">add item</string>
    <string name="Upload">Upload</string>
    <string name="Explore_Items">Explore Items</string>
    <string name="Email">Email</string>
    <string name="Place_Order">Place Order</string>
</resources>