<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="27dp"
        android:text="@string/OR"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnChefRegister"
        app:layout_constraintEnd_toEndOf="@+id/btnCustomerRegister"
        app:layout_constraintStart_toStartOf="@+id/btnCustomerRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnCustomerLogin" />

    <Button
        android:id="@+id/btnCustomerRegister"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="83dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="OpenCustomerRegistration"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/btnCustomerLogin"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:onClick="loginCustomer"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="*******************"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnChefLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Password"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddressCustomer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Email"
        android:textColor="#9C27B0"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/up_btn"
        android:onClick="GoBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="71dp"
        android:text="Login As Customer"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddressCustomer"
        android:layout_width="270dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>